fix: 신규사용자 -> db에 사용자 추가 로직 추가
